<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/backgroundassiment"
    >

    <ImageButton
        android:id="@+id/Register_img_user"
        android:background="#00F3DFBF"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic__616881619allh" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_img_user">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="10dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Login_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:drawablePadding="10dp"
                    android:hint="@string/Identification_Number"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Login_ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:drawablePadding="10dp"
                    android:hint="@string/Password"

                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/Login_btn_login"
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                >


            </com.google.android.material.button.MaterialButton>






        </LinearLayout>






    </androidx.core.widget.NestedScrollView>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/nestedScrollView"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textSize="17sp"
            android:textColor="#040303"/>

        <TextView
            android:id="@+id/Login_tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="#2196F3"
            android:text="@string/Register"
            android:textSize="17sp"

            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>