<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AddMusharaf"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addMusharaf_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/addMusharaf_img_user"
        android:background="#00F3DFBF"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/addMusharaf_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_adduser" />



    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMusharaf_img_user">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addMusharaf_ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:drawablePadding="10dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addMusharaf_ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/addMusharaf_ed_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:maxLength="10"
                    android:background="@color/white"
                    android:drawablePadding="10dp"
                    android:inputType="numberSigned"
                    android:hint="@string/phone_number"

                    />
            </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addMusharaf_btn_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:background="@color/white"
                    android:drawablePadding="10dp"
                    android:hint="@string/date" />


            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/addMusharaf_sp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addMusharaf_ed_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:drawablePadding="10dp"
                    android:hint="@string/Address"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addMusharaf_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:maxLength="9"
                    android:background="@color/white"
                    android:drawablePadding="10dp"
                    android:hint="@string/Identification_Number"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addMusharaf_ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:drawablePadding="10dp"
                        android:hint="@string/Password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addMusharaf_ed_re_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:drawablePadding="10dp"
                        android:hint="@string/rePassword"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/addMusharaf_btn_register"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:text="@string/Register"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                >

            </com.google.android.material.button.MaterialButton>






        </LinearLayout>






    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/addMusharaf_btn_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>